# SquareScint

./: README.md  setup.txt
CPP/: CMakeLists.txt  Helpers.cpp  Helpers.h  Histograms.cpp  Histograms.h  Hit.h  ProcessData.cpp  ProcessData2.cpp  ProcessDataWave.cpp  TestSet.cpp  WaveAnal.cpp  compare.cpp  main.cpp  subtract.cpp
Data/DataFileForCalibAt_X0/: Muon_0_-10.root  Muon_0_-15.root  Muon_0_-20.root  Muon_0_-5.root  Muon_0_0.root  Muon_0_10.root  Muon_0_15.root  Muon_0_20.root  Muon_0_5.root  fit.root
Data/ProcessedData/: Muon_output_-10_-10.root  Muon_output_-10_-20.root  Muon_output_-10_0.root  Muon_output_-10_10.root  Muon_output_-10_20.root  Muon_output_-20_-10.root  Muon_output_-20_-20.root  Muon_output_-20_0.root  Muon_output_-20_10.root  Muon_output_-20_20.root  Muon_output_0_-10.root  Muon_output_0_-10_Top.root  Muon_output_0_-15.root  Muon_output_0_-20.root  Muon_output_0_-5.root  Muon_output_0_0.root  Muon_output_0_10.root  Muon_output_0_15.root  Muon_output_0_20.root  Muon_output_0_5.root  Muon_output_10_-10.root  Muon_output_10_-15.root  Muon_output_10_-20.root  Muon_output_10_-5.root  Muon_output_10_0.root  Muon_output_10_10.root  (+17 more)
Python/: README  mu.py  mu3.py  mu4.py  mu4_x.py
RootMacros/: Process.C  biasSigma.C  calib.C  fit.root  getReso.C  gr.C  m10.root  m20.root  mixed.C  mixed.root  ml.root  outML.C  outMLExp.C  outML_2.C  output_0_10.root  output_0_20.root  output_10_0.root  output_20_0.root  p10.root  p20.root  treeML.C
python_code/: QAnalysis.ipynb  Refactored.ipynb  convertcsv_toroot.py  mainpy.py  mu4_x.py  mu5XGboost.py  mu5neunet.py  mu6.py  mu7.py  newupdated_mu4_x.py  position_cali.py  refactored_m4.py  superset_ortho_data_6ch.csv  testingcode_mu4.py  updated_mu4_x.py  wavee.py
